2009-04-15	Mike Massonnet
Install autostart file automagically

	- panel-plugin/xfce4-clipman-plugin-autostart.desktop.in,
	panel-plugin/Makefile.am:
		Install a system wide autostart file with Hidden set to true
		by default.
	- panel-plugin/main.c:
		New function install_autostart_file() called after creating
		the status icon to install the autostart file to the user
		config directory (thus at the first run) with the key Hidden
		set automatically to either false or left to true.

2009-04-15	Mike Massonnet
Replace g_idle against g_timeout

	- panel-plugin/main.c(status_icon_register):
		Use g_timeout of 60 seconds instead of g_idle (asap as the main
		loop is idle) since I noticed that logging in with the plugin
		being autostarted and the panel was not yet all run up, the
		plugin quit as it has been reported to be not embedded within
		the notification area.

2009-04-14	Mike Massonnet
Drop startup notification from the desktop entry file

	- xfce4-clipman-plugin.desktop.in:
		Set StartupNotify to false

2009-04-14	Mike Massonnet
Block status icon popup menu if settings dialog is open

	- panel-plugin/main.c(cb_status_icon_popup_menu):
		Don't popup the menu if the settings dialog is open.

2009-04-13	Mike Massonnet
Forgot the desktop entry files

	- panel-plugin/xfce4-clipman-plugin.desktop.in.in,
	xfce4-clipman-plugin.desktop.in:
		Use the new icons in these files aswell.

2009-04-13	Mike Massonnet
Add home-made icon for the touch of personalization

	- Makefile.am, configure.ac.in, icons/*:
		Build and install icons.
	- panel-plugin/main.c, panel-plugin/settings-dialog.glade:
		Use new icon (keep the stock icon as fallback).

2009-04-13	Mike Massonnet
Add (invisible) option in the action settings dialog

	- panel-plugin/settings-dialog.glade:
		Add a new checkbox for individual actions "Activate only on
		default clipboard" to restrict the use of an action only when
		manually copied (for instance a URL pattern). For the moment